jenkins/jenkins-deploy.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
        tier: jenkins
    spec:
      containers:
        - image: cirolini/jenkins-docker-kubectl
          name: jenkins
          securityContext:
            privileged: true
          ports:
            - containerPort: 8080
              name: jenkins
          volumeMounts:
            - name: jenkins-persistent-storage
              mountPath: /var/jenkins_home
            - name: docker
              mountPath: /var/run/docker.sock
      volumes:
        - name: docker
          hostPath:
            path: /var/run/docker.sock
        - name: jenkins-persistent-storage
          persistentVolumeClaim:
            claimName: csi-pvc
