jenkins/jks-full.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: jenkins
    tier: jenkins
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jenkins
        tier: jenkins
    spec:
      containers:
        - image: cirolini/jenkins-docker-kubectl
          name: jenkins
          securityContext:
            privileged: true
          ports:
            - containerPort: 8080
              name: jenkins
          volumeMounts:
            - name: jenkins-persistent-storage
              mountPath: /var/jenkins_home
            - name: docker
              mountPath: /var/run/docker.sock
      volumes:
        - name: docker
          hostPath:
            path: /var/run/docker.sock
        - name: jenkins-persistent-storage
          persistentVolumeClaim:
            claimName: jenkins-claim
