jenkins/jenkins-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: jenkins.codeall.com.br
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins
              servicePort: htp
